--- a/1141123.html
+++ b/1141123.html
@@ -7,7 +7,7 @@
     
     <!-- 載入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    
+    A
     <!-- 載入 Leaflet.js (地圖) -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
@@ -177,7 +177,13 @@
         <section class="bg-white cinematic-mask p-4 md:p-6">
              <div class="flex justify-between items-center mb-1">
                  <h2 class="text-xl font-bold">各組成員結構</h2>
-                 <span class="data-badge">來源: 分組名單 (N=66)</span> <!-- 修正：這裡 N=63 -->
+                 <!-- 
+                   * ---------------------------------------------------
+                   * 階段四：體驗改善
+                   * 修正 N=66 -> N=63，確保數據一致性
+                   * ---------------------------------------------------
+                 -->
+                 <span class="data-badge">來源: 分組名單 (N=63)</span>
              </div>
              <!-- 更新：移除說明文字 -->
             <p class="text-sm opacity-70 mb-4">
