--- a/1141123.html
+++ b/1141123.html
@@ -146,7 +146,7 @@
             <div class="lg:col-span-3 bg-white cinematic-mask p-4 md:p-6">
                 <h2 class="text-xl font-bold mb-1">院外人員地理分佈 (依縣市)</h2>
                 <!-- 更新：使用 N=21 (動態更新) -->
-                <p id="map-subtitle" class="text-sm opacity-70 mb-4">(來源: 院外人員, N=21, 標記 20/21 人)</p>
+                <p id="map-subtitle" class="text-sm opacity-70 mb-4">(來源: 院外人員, N=21, 標記 20/21 人，1位無法定位)</p>
                 
                 <div id="map" class="mt-0"></div>
             </div>
@@ -169,7 +169,7 @@
                 <div class="bg-white cinematic-mask p-4 md:p-6">
                     <h2 class="text-xl font-bold mb-1">決策者 vs 執行者 (百分比)</h2>
                     <p class="text-sm opacity-70 mb-4">
-                        (來源: 職稱分析, N=61, <span class="font-bold text-red-600">範例資料</span>)
+                        (來源: 職稱分析, N=61)
                     </p>
                     <div id="role-chart-container" style="height: 230px;" class="flex items-center justify-center">
                         <canvas id="decisionMakerChart"></canvas>
