--- a/1141123.html
+++ b/1141123.html
@@ -111,7 +111,7 @@
 
         <header class="text-center p-6">
             <h1 class="text-3xl md:text-4xl font-bold cinematic-title">
-                1141123 AI 工作坊 報名儀表板
+                AI 工作坊 報名儀表板(2025/11/23)
             </h1>
         </header>
 
