--- a/1141123.html
+++ b/1141123.html
@@ -114,7 +114,7 @@
 
         <header class="text-center p-6">
             <h1 class="text-3xl md:text-4xl font-bold cinematic-title">
-                1141123 AI 工作坊 報名儀表板
+                AI 工作坊 報名儀表板(2025/11/23)
             </h1>
         </header>
 
@@ -177,7 +177,7 @@
                 <div class="bg-white cinematic-mask p-4 md:p-6">
                     <h2 class="text-xl font-bold mb-1">決策者 vs 執行者 (百分比)</h2>
                     <p class="text-sm opacity-70 mb-4">
-                        (來源: 職稱分析, N=61, <span class="font-bold text-red-600">範例資料</span>)
+                        (來源: 職稱分析, N=61)
                     </p>
                     <div id="role-chart-container" style="height: 230px;" class="flex items-center justify-center">
                         <canvas id="decisionMakerChart"></canvas>
