--- a/1141123.html
+++ b/1141123.html
@@ -155,7 +155,7 @@
             <div class="lg:col-span-3 bg-white cinematic-mask p-4 md:p-6">
                 <h2 class="text-xl font-bold mb-1">院外人員地理分佈</h2>
                 <!-- 更新：使用 N=21 (動態更新) -->
-                <p id="map-subtitle" class="text-sm opacity-70">(來源: 院外人員, N=21, 標記 20/21 人)</p>
+                <p id="map-subtitle" class="text-sm opacity-70">(來源: 院外人員, N=21, 標記 20/21 人，1人無法定位)</p>
                 
                 <!-- 新增：地區人數統計容器 -->
                 <div id="city-counts-container" class="flex flex-wrap gap-2 mt-2 mb-4">
