--- a/1141123.html
+++ b/1141123.html
@@ -141,21 +141,21 @@
 
         <!-- KPI 區 (依據 分組名單 N=61) -->
         <section class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="bg-brand-main cinematic-mask p-6 text-brand-light">
+            <div class="bg-brand-accent cinematic-mask p-6 text-brand-dark"> <!-- (更新) 總報名改為琥珀色 -->
                 <div class="flex justify-between items-center">
                     <h2 class="text-lg font-semibold opacity-80">總報名人數</h2>
                     <!-- 更新：資料來源 N=61 -->
-                    <span class="data-badge" style="background-color: #003566; color: #fff;">來源: 分組名單 (N=61)</span>
+                    <span class="data-badge" style="background-color: #fca311; color: #1f2937;">來源: 分組名單 (N=61)</span> <!-- (更新) Badge 配色 -->
                 </div>
                 <!-- 更新：使用 N=61 -->
                 <p id="kpi-total" class="text-4xl font-bold mt-2">61</p>
             </div>
-            <div class="bg-brand-accent cinematic-mask p-6 text-brand-dark">
+            <div class="bg-brand-highlight cinematic-mask p-6 text-brand-dark"> <!-- (更新) 院外改為米黃色 -->
                 <h2 class="text-lg font-semibold opacity-80">院外人員</h2>
                 <!-- 更新：使用 N=21 -->
                 <p id="kpi-external" class="text-4xl font-bold mt-2">21</p>
             </div>
-            <div class="bg-brand-highlight cinematic-mask p-6 text-brand-dark">
+            <div class="bg-brand-main cinematic-mask p-6 text-brand-light"> <!-- (更新) 院內改為藍色 -->
                 <h2 class="text-lg font-semibold opacity-80">奇美醫院同仁</h2>
                 <!-- 更新：使用 N=40 -->
                 <p id="kpi-internal" class="text-4xl font-bold mt-2">40</p>
