--- a/1141123.html
+++ b/1141123.html
@@ -487,7 +487,7 @@
             new Chart(ctxCombined, {
                 type: 'doughnut',
                 data: {
-                    labels: ['院內同仁 (醫學中心)', '院外-醫學中心', '院外-診所', '院外-地區醫院', '院外-學校', '院外-其他'],
+                    labels: ['醫學中心 (院內)', '醫學中心 (院外)', '診所 (院外)', '地區醫院 (院外)', '學校 (院外)', '其他 (院外)'],
                     datasets: [{
                         label: '背景分析',
                         data: [
