--- a/1150125D.html
+++ b/1150125D.html
@@ -70,10 +70,12 @@
                 <p class="text-gray-400 text-sm">即時監控活動報名數據 (已隱藏個人識別資料)</p>
             </div>
             
-            <div class="flex gap-3">
-                <a href="#test" onclick="fillTestData()" class="hidden md:flex items-center px-4 py-2 border border-white/10 rounded-full text-xs text-gray-400 hover:text-white hover:bg-white/5 transition">
-                    <i class="fas fa-flask mr-2"></i>測試資料寫入(需切換至報名頁)
+            <div class="flex gap-3 flex-wrap">
+                <!-- 新增：返回報名頁按鈕 -->
+                <a href="1150125R.html" class="flex items-center px-4 py-2 bg-white/5 hover:bg-white/10 border border-white/10 rounded-full text-sm text-gray-300 hover:text-white transition-all">
+                    <i class="fas fa-arrow-left mr-2"></i> 返回報名頁
                 </a>
+
                 <button onclick="fetchData()" class="bg-accent hover:bg-slate-600 text-white px-6 py-2 rounded-full text-sm transition-all flex items-center gap-2 shadow-lg shadow-accent/20">
                     <i class="fas fa-sync-alt" id="refreshIcon"></i> 更新數據
                 </button>
